
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_ANONYMOUS ;
 scalar_t__ MAP_FAILED ;
 int MAP_HUGETLB ;
 int MAP_NORESERVE ;
 int MAP_SHARED ;
 int PROT_NONE ;
 int err (int,char*) ;
 int mcbuf ;
 scalar_t__ mincore (void*,int,int ) ;
 scalar_t__ mmap (void*,int,int ,int,int,int ) ;
 int perror (char*) ;
 int write (int,int ,int) ;

int main(void) {
  if (mmap((void*)0x66000000, 0x20000000000, PROT_NONE, MAP_SHARED | MAP_ANONYMOUS | MAP_HUGETLB | MAP_NORESERVE, -1, 0) == MAP_FAILED)
    err(1, "mmap");

  for (int i=0; i<10000; i++) {
    if (mincore((void*)0x86000000, 0x1000000, mcbuf))
      perror("mincore");
    write(1, mcbuf, 0x1000);
  }
}
